Update Who We Are section with compelling text and team image

--- a/index.html
+++ b/index.html
@@ -67,39 +67,41 @@
                 <div class="about-text">
                     <h2 class="about-title">Who We Are</h2>
                     <p class="about-description">
-                        ByteRise is a forward-thinking tech company delivering smart digital solutions in AI, web development, design, and marketing. We help businesses grow, automate, and stand out in the digital world.
+                        At ByteRise, we're more than just a tech company – we're a passionate team of innovators, dreamers, and problem-solvers. Born from the belief that technology should empower businesses and transform lives, we've dedicated ourselves to creating digital solutions that don't just work, but inspire.
+                    </p>
+                    <p class="about-description">
+                        Our journey began with a simple vision: to bridge the gap between cutting-edge technology and real-world business needs. Today, we're proud to be at the forefront of digital innovation, helping businesses of all sizes navigate the complex digital landscape with confidence and creativity.
                     </p>
                     <div class="about-features">
                         <div class="feature-item">
                             <div class="feature-icon">
                                 <i class="fas fa-users"></i>
                             </div>
-                            <h3>Creative & Young Team</h3>
-                            <p>Passionate professionals bringing fresh perspectives and innovative ideas to every project.</p>
+                            <h3>Dynamic Team</h3>
+                            <p>A diverse group of creative minds, tech enthusiasts, and business strategists working together to bring your vision to life.</p>
                         </div>
                         <div class="feature-item">
                             <div class="feature-icon">
-                                <i class="fas fa-cogs"></i>
+                                <i class="fas fa-lightbulb"></i>
                             </div>
-                            <h3>Tailored Solutions</h3>
-                            <p>Custom-built solutions designed specifically for your business needs and goals.</p>
+                            <h3>Innovation First</h3>
+                            <p>We don't just follow trends – we create them. Every solution is crafted with fresh thinking and cutting-edge technology.</p>
                         </div>
                         <div class="feature-item">
                             <div class="feature-icon">
-                                <i class="fas fa-rocket"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
-                            <h3>End-to-End Digital Services</h3>
-                            <p>Complete digital transformation from concept to deployment and beyond.</p>
+                            <h3>Client Success</h3>
+                            <p>Your success is our success. We're committed to delivering results that exceed expectations and drive real growth.</p>
                         </div>
                     </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="floating-elements">
-                            <div class="element element-1"></div>
-                            <div class="element element-2"></div>
-                            <div class="element element-3"></div>
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="ByteRise Team" class="team-image">
+                    <div class="image-overlay">
+                        <div class="overlay-content">
+                            <h3>Meet Our Team</h3>
+                            <p>Passionate professionals dedicated to your success</p>
                         </div>
                     </div>
                 </div>
