Add beautiful background image to hero section with overlay and proper z-index layering

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-background">
+            <div class="hero-bg-image"></div>
+            <div class="hero-overlay"></div>
             <div class="hero-particles"></div>
             <div class="hero-grid"></div>
         </div>
         <div class="container">
             <div class="hero-content">
-                
+                <div class="hero-logo">
+                    <img src="images/WhatsApp Image 2025-07-20 at 19.35.46_af360726.jpg" alt="ByteRise Logo" class="hero-logo-img">
+                </div>
                 <h1 class="hero-title">ByteRise</h1>
                 <p class="hero-subtitle">Smart Digital Solutions powered by AI, Design, and Code.</p>
                 <div class="hero-features">
