Replace three projects with AI Customer Service Agent project

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <img src="images/WhatsApp Image 2025-07-20 at 19.35.46_af360726.jpg" alt="ByteRise Logo" class="hero-logo-img">
                 </div>
                 <h1 class="hero-title">ByteRise</h1>
                 <p class="hero-subtitle">Smart Digital Solutions powered by AI, Design, and Code.</p>
@@ -64,7 +63,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="about-content">
-                <div class="about-text">
+                                <div class="about-text">
                     <h2 class="about-title">Who We Are</h2>
                     <p class="about-description">
                         At ByteRise, we're more than just a tech company – we're a passionate team of innovators, dreamers, and problem-solvers. Born from the belief that technology should empower businesses and transform lives, we've dedicated ourselves to creating digital solutions that don't just work, but inspire.
@@ -249,60 +248,20 @@
                 <div class="portfolio-card">
                     <div class="portfolio-image">
                         <div class="image-placeholder">
-                            <i class="fas fa-cogs"></i>
+                            <i class="fas fa-robot"></i>
                         </div>
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
-                                <h3>Project Management System</h3>
-                                <p>Advanced project tracking and team collaboration platform</p>
-                                <span class="tech-stack">React • Node.js • MongoDB</span>
+                                <h3>AI Customer Service Agent</h3>
+                                <p>Intelligent chatbot for customer support and inquiries</p>
+                                <span class="tech-stack">Python • NLP • Machine Learning</span>
                             </div>
                         </div>
                     </div>
                     <div class="portfolio-info">
-                        <h3>Project Management System</h3>
-                        <p>Real-time project management with task tracking, team collaboration, and progress monitoring</p>
-                        <span class="project-status in-progress">🔄 In Progress</span>
-                    </div>
-                </div>
-                
-                <div class="portfolio-card">
-                    <div class="portfolio-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-mobile-alt"></i>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <div class="overlay-content">
-                                <h3>Mobile App Development</h3>
-                                <p>Cross-platform mobile application for business</p>
-                                <span class="tech-stack">React Native • Firebase • Redux</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-info">
-                        <h3>Mobile App Development</h3>
-                        <p>Native mobile application with offline capabilities and real-time synchronization</p>
-                        <span class="project-status in-progress">🔄 In Progress</span>
-                    </div>
-                </div>
-                
-                <div class="portfolio-card">
-                    <div class="portfolio-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <div class="overlay-content">
-                                <h3>Analytics Dashboard</h3>
-                                <p>Business intelligence and data visualization platform</p>
-                                <span class="tech-stack">Vue.js • D3.js • AWS</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-info">
-                        <h3>Analytics Dashboard</h3>
-                        <p>Interactive dashboard with real-time data visualization and business insights</p>
-                        <span class="project-status planning">📋 Planning</span>
+                        <h3>AI Customer Service Agent</h3>
+                        <p>Advanced AI-powered chatbot that handles customer inquiries, provides instant responses, and offers personalized support 24/7</p>
+                        <span class="project-status completed">✅ Completed</span>
                     </div>
                 </div>
             </div>
