Update team image with flat design graphic illustration

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1559136555-9303baea8ebd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="ByteRise Team" class="team-image">
+                    <img src="https://img.freepik.com/free-vector/business-team-discussing-ideas-startup_74855-4380.jpg?w=1380&t=st=1703123456~exp=1703124056~hmac=1234567890abcdef" alt="ByteRise Team" class="team-image">
                     <div class="image-overlay">
                         <div class="overlay-content">
                             <h3>Meet Our Team</h3>
